<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditMovies">
    <!--    android:background="@drawable/background"-->

    <TextView
        android:id="@+id/tvID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="110dp"
        android:text="@string/movie_id"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text=""
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="text"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:text=""
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter_genre"
        android:inputType="text"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="20sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/enter1"
        android:inputType="text"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <Spinner
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerItems"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp" >
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>